--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -136,8 +136,18 @@ const { title } = Astro.props;
 		font-size: 1.6rem;
 		font-weight: 400;
 	}
+	.mewo {
+		position: absolute;
+	 	padding-bottom: 498px;
+		padding-left: 25px;
+  		cursor: grab;
+	}
 	li {
 		margin-bottom: 1rem;
+	}
+	.border {
+		border: solid 5px var(--accent);
+		padding: 0.5rem;
 	}
 	header {
 		margin: 0;
