--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -215,13 +215,13 @@ import Card from '../components/Card.astro';
 			<a href="https://moonlitautumn.github.io/webbb/youarevalid">pssst click here for validation!</a>
 		</p>
 
-		<a onclick="mewo()" class="mewo">
+		<a onclick="mewow();" class="mewo">
 			<img src="https://raw.githubusercontent.com/moonlitautumn/webbb/master/public/MEWO.png">
 		</a>
 		<script>
 			var mew = new Audio('https://raw.githubusercontent.com/moonlitautumn/webbb/master/public/SE_Cat_Meow.ogg');
-     		function mewo() {
-            		mew.play();
+     		function mewow() {
+            	mew.play();
      		}
 		</script>
 	</main>
