--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -214,16 +214,17 @@ import Card from '../components/Card.astro';
 		<p style="font-size: 0.5rem; colour: var(--overlay1);">
 			<a href="https://moonlitautumn.github.io/webbb/youarevalid">pssst click here for validation!</a>
 		</p>
-
-		<a onclick="mewow();" class="mewo">
-			<img src="https://raw.githubusercontent.com/moonlitautumn/webbb/master/public/MEWO.png">
-		</a>
+		
 		<script>
 			var mew = new Audio('https://raw.githubusercontent.com/moonlitautumn/webbb/master/public/SE_Cat_Meow.ogg');
      		function mewow() {
             	mew.play();
      		}
 		</script>
+
+		<a onclick="mewow()" class="mewo">
+			<img src="https://raw.githubusercontent.com/moonlitautumn/webbb/master/public/MEWO.png">
+		</a>
 	</main>
 
 	<footer>
