--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -132,7 +132,7 @@ import Card from '../components/Card.astro';
 		</h3>
 		<div class="border">
 
-			<h2>whoaaa who is this fella???</h2>
+			<h2>whoaaa who is this girl???</h2>
 			<p>
 				I'm a 17 year old <span style="color: var(--overlay1)">(probably audhd-tistic)</span> 
 				girl thats LOVES spending time on her pc
@@ -216,7 +216,7 @@ import Card from '../components/Card.astro';
 		</p>
 
 		<audio id="meow" src="https://raw.githubusercontent.com/moonlitautumn/webbb/master/public/SE_Cat_Meow.ogg"></audio>
-		<a onclick="document.getElementById('meow').play();">
+		<a class='mewo' onclick="document.getElementById('meow').play();">
 			<img src="https://raw.githubusercontent.com/moonlitautumn/webbb/master/public/MEWO.png">
 	    </a>
 	</main>
